Prepare for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "cangenesis-healthcare",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://cangenesis-healthcare.github.io/Cangenesis",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -19,9 +20,12 @@
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "sass": "^1.80.5",
+    "serverless-http": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
