--- a/vercel.json
+++ b/vercel.json
@@ -16,8 +16,8 @@
         "dest": "/build/$1"
       },
       {
-        "src": "/api/(.*)",
-        "dest": "/api/server.js"
+        "src": "api/(.*)",
+        "dest": "api/server.js"
       }
     ]
   }
