--- a/vercel.json
+++ b/vercel.json
@@ -2,23 +2,17 @@
     "version": 2,
     "builds": [
       {
-        "src": "build/**/*",
-        "use": "@vercel/static"
+        "src": "backend/server.js",
+        "use": "@vercel/node"
       },
       {
-        "src": "api/server.js",
-        "use": "@vercel/node"
+        "src": "build/**",
+        "use": "@vercel/static"
       }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/build/$1"
-      },
-      {
-        "src": "api/(.*)",
-        "dest": "api/server.js"
-      }
+      { "src": "/api/(.*)", "dest": "backend/server.js" },
+      { "src": "/(.*)", "dest": "build/$1" }
     ]
   }
   
