--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cangenesis-healthcare",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://cangenesis-healthcare.github.io/Cangenesis",
+  "homepage": ".",
   "dependencies": {
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
@@ -51,5 +51,8 @@
   },
   "devDependencies": {
     "gh-pages": "^6.2.0"
-  }
+  },
+    "engines": {
+      "node": "18.20.4"
+    }
 }
