--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
     ],
     "routes": [
       { "src": "/api/(.*)", "dest": "backend/server.js" },
-      { "src": "/(.*)", "dest": "build/$1" }
+      { "src": "/(.*)", "dest": "/build/$1" }
     ]
   }
   
